[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "github"
version = "0.1.0"
description = ""
authors = ["Vaclav Pech <vaclpech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
flask = "^2.3.2"
matplotlib = "^3.7.1"
